# processor-rs

./: Cargo.toml  README.md  build.rs
proto/: query.proto
src/: lib.rs  main.rs  processor.rs  types.rs
src/steps/: image.rs  mod.rs  office.rs  pdf.rs  spreadsheet.rs  text.rs
tests/: integration_test.rs
