[package]
name = "processor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

# File processing
calamine = "0.22"
lopdf = "0.31"
image = "0.24"
leptess = "0.14"
mupdf = "0.4.4"
quick-xml = "0.31"
zip = "0.6"

# Compression/Serialization
prost = "0.12"
prost-types = "0.11"
protobuf = "3.2"
base64 = "0.21"
zstd = "0.12"

# Utilities
tempfile = "3.8"
mime = "0.3"
mime_guess = "2.0"
rayon = "1.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
num_cpus = "1.0"
lazy_static = "1.4"

# PDF to image conversion
poppler = "0.3"

# Regex
regex = "1.10"

# Chrono
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.12"
